<resources>
    <string name="app_name">Sport4U</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="title_activity_login">Iniciar Sesion</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="usuario">usuario</string>
    <string name="Iniciar_Sesion">Iniciar Sesion</string>
    <string name="Login">Login</string>
    <string name="password">password</string>
    <string name="confirm_password">confirmar password</string>
    <string name="title_activity_bottom_navbar">bottomNavbarActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="perfil">Perfil</string>
    <string name="camino_al_exito">Camino al éxito</string>
    <string name="Historico">Histórico</string>
    <string name="Fecha">Fecha</string>
    <string name="Pasos">Pasos</string>
    <string name="Distancia">Distancia (m)</string>
    <string name="Calorias">Calorias (cal)</string>
    <string name="pasos_realizados">Pasos realizados:</string>
    <string name="distancia_recorrida">Distancia recorrida:</string>
    <string name="calorias_quemadas">Calorias quemadas:</string>
    <string name="estado_actual">Estado actual</string>
    <string name="ltimo_entreno">Último entreno</string>
    <string name="imc">IMC:</string>
    <string name="Peso">Peso:</string>
    <string name="nivel">Nivel:</string>
    <string name="ejercicios_realizados">Ejercicios realizados</string>
    <string name="imagen_del_login">imagen del login</string>
    <string name="no_tienes_cuenta">No tienes cuenta?</string>
    <string name="registrate">Registrate!</string>
    <string name="title_activity_registrar">Registro</string>
    <string name="a_por_el">A POR ÉL!</string>
    <string name="completado_exclamacion">COMPLETADO!</string>
    <string name="foto_del_estado">Foto del estado</string>
    <string name="foto_del_ultimo_entreno">Foto del ultimo entreno</string>
    <string name="proximoObjetivo">Próximo objetivo</string>
    <string name="tu_puedes">¡TÚ PUEDES!</string>
    <string name="nombre">Nombre:</string>
    <string name="distancia_total_recorrida">Distancia total recorrida:</string>
    <string name="pasos_totales_realizados">Pasos totales realizados:</string>
    <string name="altura">Altura</string>
    <string name="calorias_totales_quemadas">Calorias totales quemadas:</string>
    <string name="nombre_de_usuario">Nombre de usuario :</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento:</string>
    <string name="sexo">Sexo:</string>
    <string name="modificar">Modificar</string>
    <string name="actualizar">Actualizar</string>
    <string name="zancada">Zancada</string>
    <string name="siguiente">Siguiente</string>
    <string name="anterior">Anterior</string>
</resources>
