<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.HistoricoActivity">

    <TableLayout
        android:id="@+id/tabla"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        android:background="#ffff">


        <!-- Row 1 with single column -->
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal"
            android:background="@drawable/border">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/ejercicios_realizados"
                android:layout_span="5"
                android:padding="18dip"
                android:background="@drawable/border"
                android:textColor="#000"
                android:textAlignment="center"
                />

        </TableRow>

        <!-- Row 2 with 3 columns -->


        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:background="@drawable/border">

            <TextView
                android:id="@+id/fecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/Fecha"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/pasos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="20dip"
                android:text="@string/Pasos"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/TextView05"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="20dip"
                android:text="@string/Distancia"
                android:textColor="#000000" />
            <TextView
                android:id="@+id/TextView06"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="20dip"
                android:text="@string/Calorias"
                android:textColor="#000000" />

        </TableRow>

    </TableLayout>
</android.support.constraint.ConstraintLayout>

